--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "quran-quiz": "^0.1.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
